--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.aftermeals">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -33,12 +36,15 @@
         <activity android:name=".List.storelist_korea" />
         <activity android:name=".List.storelist_china" />
         <activity android:name=".PostActivity" />
+        <activity android:name=".payment.payment_end" />
+
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_storeinfo_korea"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Login">
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
